# backend/src/model/interfaces/notification-settings.interface.ts
@@ -1,0 +1,21 @@
+export interface GeneralNotifications {
+  all: boolean;
+  programs: boolean;
+  tasks: boolean;
+  approvalRequests: boolean;
+  reports: boolean;
+}
+
+export interface DiscussionNotifications {
+  commentOnMyPost: boolean;
+  posts: boolean;
+  comments: boolean;
+  mentions: boolean;
+  directMessage: boolean;
+}
+
+export interface UpdateNotificationSettingsInput {
+  user_id: number;
+  generalNotifications: GeneralNotifications;
+  discussionNotifications: DiscussionNotifications;
+}
